安卓完成测试

--- a/ios/umFeedback.bundle/chat_en.html
+++ b/ios/umFeedback.bundle/chat_en.html
@@ -87,7 +87,7 @@
         <div id="page">
             <div id="feedbacks_body">
                 <div class="messageBody messageReceive clear">
-                    <div class="messageContent">Dear customer, I am the product manager. You are more than welcomed to
+                    <div class="messageContent">You are more than welcomed to
                         provide your user experiences and suggestions to us. Your opinion is really important to us.
                     </div>
                     <div class="arrow"></div>
