--- a/ios/umFeedback.bundle/chat_zh-Hans.html
+++ b/ios/umFeedback.bundle/chat_zh-Hans.html
@@ -87,7 +87,7 @@
         <div id="page">
             <div id="feedbacks_body">
                 <div class="messageBody messageReceive clear">
-                    <div class="messageContent">您好，我是产品经理，欢迎您给我们提产品的使用感受和建议！</div>
+                    <div class="messageContent">您好，请随意吐槽！</div>
                     <div class="arrow"></div>
                 </div>
                 <!-- 反馈列表将插入topics div里 -->
@@ -102,14 +102,6 @@
     <table style="width:100%;height:40px;">
         <tr>
             <td style="width:34px;">
-                <select id="rate">
-                    <option value>请评价</option>
-                    <option value="5">非常好</option>
-                    <option value="4">好</option>
-                    <option value="3">一般</option>
-                    <option value="2">不好</option>
-                    <option value="1">非常差</option>
-                </select>
             </td>
             <td style="vertical-align: top;">
                 <input class="textField" type="text" id="content" value=" " placeholder=""/>
